//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package go_protos;

option go_package = "./go_protos";

import "imdatachain_clientbase.proto";

message ImDataChainInvitation {
  ImClientBase    Base             =1;  //
  bytes           GroupID          =2;  //群id
  bytes           AdminAddr        =3;  //管理员地址
  bytes           Token            =4;  //令牌
  bytes           Nickname         =5;  //好友昵称
  bytes           GroupNickname    =6;  //群昵称
}
